# James-Joseph-Associates

./: .env.example  .gitignore  github_timer  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yaml
api/: index.py
app/: globals.css  layout.tsx  page.tsx
backend/: main.py  settings.py
backend/api/: router.py
backend/core/: errors.py  http.py  idempotency.py  security.py
backend/db/: candidates.py  connection.py  jobadder_oauth.py  jobs.py  skills.py
backend/graphs/: foundation.py  state.py
backend/llm/: models.py
backend/schemas/: candidates.py  common.py  integrations.py
backend/services/: candidate_profiles.py  jobadder_oauth.py
docs/: api_contract.md  deployment_and_ci.md  domain_model.md  jobadder_discovery_playbook.md  jobadder_oauth_setup.md  langgraph_foundation.md  llm_foundation.md  make_service_coverage.md  north_star_architecture.md  phase_1_todo.md  project_structure.md  source_data_requirements.md  source_system_discovery_checklist.md
setup/: setup.md
supabase/: README.md
supabase/migrations/: 0001_enable_extensions.sql  0002_prototype_core_entities.sql
supabase/seeds/: prototype_seed.sql
tests/integration/: test_api_candidates.py  test_api_error_handlers.py  test_api_health.py  test_api_integrations.py  test_api_make.py  test_app_routes.py
tests/unit/: errors.py  test_candidate_profiles.py  test_db_candidates.py  test_db_jobadder_oauth.py  test_db_jobs.py  test_db_skills.py  test_error_handlers.py  test_error_schemas.py  test_graph_foundation.py  test_http_helpers.py  (+5 more)
(+4 files in other folders)
