[project]
name = "james-joseph-associates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langgraph>=1.1.8",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "uvicorn>=0.44.0",
]
